--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
-.navbar-brand{
+/* .weatherdash{
     justify-content: center;
     font-size: xx-large;
-}
+    text-align: center;
+} */
 
 .leftCol{
 float: left;
